--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
-        <title>Fine Uploader</title>
+        <title>Uploader</title>
         <meta charset="utf-8" />
         <link href="http://selfcss.org/baf/css/baf.css" media="screen" rel="stylesheet" type="text/css">
         <!-- <link href="../client/fineuploader.css" rel="stylesheet" type="text/css"/> -->
