--- a/test/min.html
+++ b/test/min.html
@@ -2,20 +2,16 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
     <head>
-        <title>Fine Uploader</title>
+        <title>Uploader</title>
         <meta charset="utf-8" />
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.1.0/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
-        <link href="../client/fineuploader.css" rel="stylesheet" type="text/css"/>
-        <link href="css/styles.css" rel="stylesheet" type="text/css"/>
+        <link href="http://selfcss.org/baf/css/baf.css" media="screen" rel="stylesheet" type="text/css">
+        <link href="../client/uploader.css" rel="stylesheet" type="text/css"/>
+        <link href="./css/styles.css" rel="stylesheet" type="text/css"/>
         <script src="../client/uploader.min.js"></script>
-        <script src="js/uploader-demo.js"></script>
+        <script src="./js/uploader-demo.js"></script>
     </head>
     <body>
         <h1>Fine Uploader Demo</h1>
-
-        <img src="https://www.google.com/images/srpr/logo3w.png"/>
-
         <div id="examples">
             <div class="example">
                 <h3>Simple & Automatic</h3>
@@ -61,7 +57,7 @@
             </div>
 
             <h4 class="endingRemark">Fine Uploader is currently an active project, and many improvements and adjustments are possible in the near future.  Please see the
-            <a href="https://github.com/valums/file-uploader">Github project page</a> for more details.
+            <a href="https://github.com/SimonWaldherr/uploader">Github project page</a> for more details.
             You may also examine the <a href="js/uploader-demo.js" class="decorate"><code>uploader-demo.js</code></a>
             source file on this page.</h4>
         </div>
